# 2025H-420-910-MA-Pithon

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
consignes/: clone.md  install.md  test.md
docs/: architecture.md
src/pithon/: cli.py  syntax.py
src/pithon/evaluator/: envframe.py  envvalue.py  evaluator.py  primitive.py
src/pithon/parser/: simpleparser.py
test/: test-1.py  test-3.py  test-5.py  test-7.py  test-addition.py  test-boolean.py  test-for.py  test-function-1.py  test-function-2.py  test-list-2.py  test-string-3.py
tests/: test_cli.py
tests/fixtures/programs/: and.py  class_1.py  class_2.py  class_3.py  class_4.py  class_err_1.py  class_err_2.py  class_err_3.py  class_err_4.py  comparison.py  division.out  division.py  for-break.py  for-continue.py  for-loop-complex.out  for-loop-complex.py  for_strings.out  for_strings.py  forcontinue.py  function-2.py  function-3.py  function-4.py  gt-2.py  if-else-complex.out  if-else-complex.py  in.out  in.py  list-3.py  list-in-list.py  list-operations.out  list-operations.py  listoflist_tupleoftuple.out  listoflist_tupleoftuple.py  modulo.py  mult_lists_string.out  mult_lists_string.py  multiplication.py  nested-functions.py  none_tout.out  none_tout.py  (+28 more)
